# graphistry-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  run_graphistry_mcp.py  setup-graphistry-mcp.sh  start-graphistry-mcp.sh
scripts/: setup-graphistry-mcp.sh
src/graphistry_fastmcp/: server.py
src/graphistry_mcp_server/: __init__.py  server.py
tests/: test_server.py
