[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphistry-mcp-server"
version = "0.1.0"
description = "Graphistry MCP integration for graph visualization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "GraphistryMCP Contributors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp",
    "graphistry",
    "pandas",
    "networkx",
    "asyncio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
graphistry-mcp = "graphistry_mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]